# frankd

./: CMakeLists.txt  README.md
contrib/windows-gcc-x86/include/GL/: glu.h
contrib/windows-gcc-x86/include/SDL2/: SDL.h
contrib/windows-vc10-x86/include/GLD/: gl.h
contrib/windows-vc10-x86/lib/: GLD.lib  SDL2.lib  plank.lib  ws.lib
contrib/windows-vc15-x86/include/GL/: gl.h  glut.h
contrib/windows-vc15-x86/include/GLD/: glu.h  glut.h
contrib/windows-vc15-x86/include/SDL2/: SDL_image.h
contrib/windows-vc15-x86/lib/: GLD.lib  SDL2.lib  plank.lib  ws.lib
legacy/: z3a.vcxproj  z3a.vcxproj.filters
raw/: dummy.txt
src/: Apple.cpp  Apple.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Font.cpp  Foot.cpp  Foot.h  Hand.cpp  Hand.h  Mob.cpp  Mob.h  Monster.cpp  Monster.h  Overlay.cpp  Overlay.h  Player.cpp  Player.h  Sound.cpp  main.cpp  util.cpp  util.h
